[tool.poetry]
name = "screener"
version = "0.1.0"
description = "Modular quantitative research screener"
authors = ["James Liao"]
license = "Apache-2.0"
repository = "https://github.com/jamesjxliao/yass"
packages = [{include = "screener", from = "src"}]

[tool.poetry.scripts]
screener = "screener.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.0"
duckdb = "^1.0"
httpx = "^0.27"
pydantic = "^2.0"
pydantic-settings = "^2.0"
typer = "^0.12"
# Typer 0.12.x calls click's Parameter.make_metavar() with no args; Click 8.2
# made `ctx` required, which crashes `--help` rendering. Pin <8.2 (8.1.x has the
# old signature). Bump together with Typer if moving to Click >=8.2.
click = ">=8.1,<8.2"
pyyaml = "^6.0"
python-dateutil = "^2.9"
pyarrow = ">=15.0"
matplotlib = "^3.8"
streamlit = "^1.55.0"
alpaca-py = "^0.43.2"
numpy = "^2.0"
scipy = "^1.13"
scikit-learn = "^1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.5"
pytest-cov = "^7.1.0"

[tool.poetry.group.backtest]
optional = true

[tool.poetry.group.backtest.dependencies]
vectorbt = ">=0.26"

[tool.coverage.run]
source = ["src/screener", "signals", "filters"]
# Omit the integration/IO/presentation layers that are exercised manually or via
# the live CLI, not unit tests — so the gate measures the testable CORE LOGIC
# (engine, backtest, trading, signals, data). These remain known gaps to cover
# with integration tests over time (esp. cli.py — the frequency bug lived there).
omit = [
    "*/__init__.py",
    "src/screener/cli.py",            # Typer command wiring + I/O orchestration
    "src/screener/evaluation/charts.py",  # matplotlib plotting
    "src/screener/data/earnings.py",  # SEC EDGAR network fetcher
    "src/screener/research/loop.py",  # autoresearch orchestration (integration)
]

[tool.coverage.report]
# Deterministic coverage gate over core logic (currently ~61%). Set a little
# below current as a ratchet that catches gross regressions without being brittle
# (also absorbs the public-repo difference, which lacks the experimental hedge
# model). Raise as coverage improves; never lower without reason.
fail_under = 58
skip_covered = false
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/screener/evaluation/report.py" = ["N803", "N806"]
"tests/test_evaluation.py" = ["N806"]
# ML/math conventions (X, y, T) and verbose log/print lines in the research model
# research harnesses: compact guard lines (append/reset/continue) in rebalance loops

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
